# bio-adaptive-qec-simulation

./: .gitignore  ARCHITECTURE.md  BA_QEC_Simulation.ipynb  CONTRIBUTING.md  IBM_TORINO_NOV21_2025_D3_R50_30K_REAL.pkl  LICENSE  README.md  Simulate_Immune_Decoder.ipynb  bio-adaptive-qec-real-hardware-first-run.ipynb  notebooks:cross_domain_isomorphism_analysis.ipynb  pyproject.toml  realqtest_1121.py  requirements.txt  setup.py
notebooks/: ba_qec_surface_code.ipynb  real_bio_adaptive_qec_v1.ipynb  simulate_immune_decoder
simulations/: clonal_benchmark.py  hamming_cdr3.py
src/: decoder.py
